<resources>
    <string name="app_name">ControladorRobo</string>
    <string name="txtBtnForward">Frente</string>
    <string name="txtBtnRight">Direita</string>
    <string name="txtBtnLeft">Esquerda</string>
    <string name="txtBtnBackward">Trás</string>
    <string name="txtBtnStopRobot">Parar Robô</string>
    <string name="action_settings">Settings</string>
    <string name="none_paired">Nenhum aparelho pareado!</string>
    <string name="txtTitlePairedDevices">Dispositivos pareados</string>
    <string name="txtBtnToControlador">Ir para Controlador</string>
    <string name="txtLdr">LDR</string>
    <string name="txtUmidade">Umidade</string>
    <string name="txtTemperatura">Temperatura</string>
    <string name="txtVlLdr" />
    <string name="txtVlTemperatura" />
    <string name="txtVlUmidade" />
    <string name="txtVelocidade">Velocidade</string>
    <string name="txtVlVelocidade"></string>
</resources>
