<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <Button
        android:id="@+id/btnForward"
        android:layout_width="120dp"
        android:layout_height="55dp"
        android:text="@string/txtBtnForward"
        android:layout_marginBottom="40dp"
        android:layout_above="@+id/btnStopRobot"
        android:layout_alignParentStart="true"
        android:layout_marginStart="23dp" />

    <Button
        android:id="@+id/btnLeft"
        android:layout_width="120dp"
        android:layout_height="55dp"
        android:text="@string/txtBtnLeft"
        android:layout_centerVertical="true"
        android:layout_alignStart="@+id/btnForward" />

    <Button
        android:id="@+id/btnRight"
        android:layout_width="120dp"
        android:layout_height="55dp"
        android:text="@string/txtBtnRight"
        android:layout_alignBaseline="@+id/btnLeft"
        android:layout_alignBottom="@+id/btnLeft"
        android:layout_alignEnd="@+id/btnBackward" />

    <Button
        android:id="@+id/btnBackward"
        android:layout_width="120dp"
        android:layout_height="55dp"
        android:text="@string/txtBtnBackward"
        android:layout_marginEnd="20dp"
        android:layout_alignBaseline="@+id/btnForward"
        android:layout_alignBottom="@+id/btnForward"
        android:layout_alignParentEnd="true" />

    <Button
        android:id="@+id/btnStopRobot"
        android:layout_width="120dp"
        android:layout_height="55dp"
        android:text="@string/txtBtnStopRobot"
        android:layout_marginBottom="10dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true" />

    <TextView
        android:id="@+id/txtv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/btnRight"
        android:layout_marginBottom="40dp" />

    <TextView
        android:id="@+id/txtVelocidade"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="26dp"
        android:text="@string/txtVelocidade"
        android:layout_above="@+id/txtv"
        android:layout_alignStart="@+id/btnLeft" />

    <SeekBar
        android:id="@+id/skVelocidade"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/btnRight"
        android:layout_alignStart="@+id/btnStopRobot"
        android:layout_below="@+id/txtVelocidade"
        android:max="255"
        android:progress="1" />

    <TextView
        android:id="@+id/txtLdr"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/txtLdr"
        android:layout_alignParentTop="true"
        android:layout_alignStart="@+id/txtVelocidade" />

    <TextView
        android:id="@+id/vlLdr"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/txtLdr"
        android:layout_below="@+id/txtLdr"
        android:layout_marginTop="16dp"
        android:text="@string/txtVlLdr" />

    <TextView
        android:id="@+id/txtTemperatura"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txtTemperatura"
        android:layout_alignBaseline="@+id/txtLdr"
        android:layout_alignBottom="@+id/txtLdr"
        android:layout_toEndOf="@+id/txtVelocidade" />

    <TextView
        android:id="@+id/vlTemperatura"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/txtTemperatura"
        android:layout_alignTop="@+id/vlLdr"
        android:text="@string/txtVlTemperatura" />

    <TextView
        android:id="@+id/txtUmidade"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txtUmidade"
        android:layout_alignBaseline="@+id/txtTemperatura"
        android:layout_alignBottom="@+id/txtTemperatura"
        android:layout_alignStart="@+id/btnRight" />

    <TextView
        android:id="@+id/vlUmidade"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/txtUmidade"
        android:layout_alignTop="@+id/vlTemperatura"
        android:text="@string/txtVlUmidade" />

    <TextView
        android:id="@+id/vlVelocidade"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/txtv"
        android:layout_toEndOf="@+id/vlLdr"
        android:text="@string/txtVlVelocidade" />

</RelativeLayout>
